# mycli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
