[package]
name = "mycli"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["blocking","json"] }
serde_json = "1.0.143"
url = "2.5.7"
urlencoding = "2.1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
colored = "3.0.0"

[[bin]]
name = "openconnect"
path = "src/bin/openconnect.rs"
