[package]
name = "mycli"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["blocking","json"] }
serde_json = "1.0.143"
url = "2.5.7"
urlencoding = "2.1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
colored = "3.0.0"
md5 = "0.8.0"
chrono = "0.4.42"

[profile.release]
opt-level = "z" # 选择更激进的优化，旨在最小化代码大小
strip = true # 移除符号表和调试信息，显著减小文件体积。
lto=true # 启用Link Time Optimization（链接时优化），能进一步减小代码大小和提高性能。